[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/States/ChartState/ChartEventCreatePopup.gd" type="Script" id=1]
[ext_resource path="res://Assets/Other/editor_theme.tres" type="Theme" id=2]

[node name="CreateEventPopup" type="WindowDialog"]
margin_right = 554.0
margin_bottom = 243.0
theme = ExtResource( 2 )
popup_exclusive = true
window_title = "Event Creator"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameEdit" type="LineEdit" parent="."]
margin_left = 13.0
margin_top = 12.0
margin_right = 286.0
margin_bottom = 36.0
placeholder_text = "Name"
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArgumentEdit" type="LineEdit" parent="."]
margin_left = 13.0
margin_top = 44.0
margin_right = 286.0
margin_bottom = 68.0
placeholder_text = "Arguments (seperate with commas)"
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorEdit" type="ColorPickerButton" parent="."]
margin_left = 238.0
margin_top = 202.0
margin_right = 285.0
margin_bottom = 226.0
color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreateButton" type="Button" parent="."]
margin_left = 13.0
margin_top = 202.0
margin_right = 226.0
margin_bottom = 226.0
text = "create event"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OtherEvents" type="ItemList" parent="."]
margin_left = 297.0
margin_top = 136.0
margin_right = 539.0
margin_bottom = 226.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExistingEvents" type="ItemList" parent="."]
margin_left = 297.0
margin_top = 11.0
margin_right = 539.0
margin_bottom = 121.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="Label" parent="."]
margin_left = 13.0
margin_top = 74.0
margin_right = 286.0
margin_bottom = 190.0
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="about_to_show" from="." to="." method="_on_CreateEventPopup_about_to_show"]
[connection signal="popup_hide" from="." to="." method="_on_CreateEventPopup_popup_hide"]
[connection signal="pressed" from="CreateButton" to="." method="_on_CreateButton_pressed"]
[connection signal="item_activated" from="OtherEvents" to="." method="_on_OtherEvents_item_activated"]
[connection signal="item_activated" from="ExistingEvents" to="." method="_on_ExistingEvents_item_activated"]
